# DefectGen

./: .gitignore  CLAUDE.md  README.md  history.md  pyproject.toml
configs/: ddpm_wafer.yaml  flow_matching_pcb.yaml
docs/: architecture.md  mcp.md
docs/paper_notes/: _template.md
experiments/templates/: report_template.md
export/: ddpm_denoiser.onnx  fm_vector_field.onnx
scripts/: evaluate.py  generate.py  train.py
src/: __init__.py
src/data/: __init__.py
src/data/augmentation/: __init__.py  copy_paste.py  cutout.py  elastic.py
src/data/loaders/: __init__.py  _base.py  deeppcb.py  mvtec.py  neudet.py  wm811k.py
src/data/synthesizers/: __init__.py
src/evaluation/: __init__.py
src/evaluation/metrics/: __init__.py  base.py  defect_coverage.py  fid.py  intra_class_diversity.py
src/evaluation/visualization/: __init__.py  grid.py
src/inference/: __init__.py  pipeline.py
src/mcp/: __init__.py  server.py
src/models/: __init__.py  base.py  unet.py
src/models/diffusion/: __init__.py  ddpm.py
src/models/flow_matching/: __init__.py  ot_cfm.py
src/training/: __init__.py
src/training/callbacks/: __init__.py
src/training/ddp/: __init__.py  ema.py  trainer.py  utils.py
src/training/schedulers/: __init__.py
src/utils/: config.py  seed.py
tests/: test_ddp_wrapper.py  test_mcp_tools.py  test_models_shape.py
